# aion2-dps-meter

./: .gitignore  aion2meter.spec  pyproject.toml
docs/: 브레인스토밍-OCR딜미터기-구현계획.md  아이온2 실시간 라이브 OCR 기반 딜 미터기 가능성 평가.md
docs/plans/: 2026-02-12-phase3-4-design.md  2026-02-12-phase3-4-implementation.md  2026-02-12-phase5-design.md  2026-02-12-phase5-implementation.md  2026-02-12-phase6-design.md  2026-02-12-phase6-implementation.md  2026-02-12-phase7-design.md  2026-02-12-phase7-implementation.md
scripts/: build.py
src/aion2meter/: __init__.py  __main__.py  alert_manager.py  app.py  config.py  hotkey_manager.py  logging_config.py  models.py  profile_manager.py  protocols.py  updater.py
src/aion2meter/calculator/: dps_calculator.py
src/aion2meter/capture/: mss_capture.py  roi.py
src/aion2meter/io/: __init__.py  combat_logger.py  discord_notifier.py  ocr_debugger.py  session_repository.py
src/aion2meter/ocr/: easyocr_engine.py  engine_manager.py  tesseract_engine.py  winocr_engine.py
src/aion2meter/parser/: combat_parser.py
src/aion2meter/pipeline/: pipeline.py
src/aion2meter/preprocess/: image_proc.py
src/aion2meter/ui/: overlay.py  roi_selector.py  session_compare.py  session_report.py  settings_dialog.py  (+3 more)
tests/: test_alert_manager.py  test_calculator.py  test_capture.py  test_combat_logger.py  test_config.py  test_discord_notifier.py  test_easyocr_engine.py  test_hotkey_manager.py  test_models.py  test_ocr.py  test_ocr_debugger.py  test_parser.py  test_pipeline.py  test_preprocess.py  test_profile_manager.py  test_session_repository.py  test_updater.py
