[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aion2meter"
version = "0.1.0"
description = "아이온2 OCR 기반 실시간 딜 미터기"
requires-python = ">=3.12"
dependencies = [
    "mss>=9.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "PyQt6>=6.6",
    "matplotlib>=3.8",
    "pynput>=1.7",
]

[project.optional-dependencies]
winocr = ["winocr>=0.2"]
tesseract = ["pytesseract>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
]
build = ["pyinstaller>=6.0"]

[project.scripts]
aion2meter = "aion2meter.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aion2meter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
